--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,9 +1,15 @@
+@import "aboutModal";
 @import "blogModal";
+@import "contactModal";
+@import "portfolioModal";
 
 
 
+body
+{
+	background-color: white;
 
-
+}
 
 
 
