--- a/public/scss/_aboutModal.scss
+++ b/public/scss/_aboutModal.scss
@@ -25,7 +25,7 @@
 	z-index: 99;
 	display:none;
 	position: fixed;
-	left:0;
+	right:0;
 	top:0;
 	height: 100%;
 	width: 100%;
@@ -40,53 +40,43 @@
 
 
 	.modal-content3
-	{	
+	{
 		position: fixed;
 		background-color: white;
 		padding-bottom: 50px;
 		margin-right: auto;
-		width: 50%;
+		width: 30%;
+		height: 50%;
 		top: 0;
 		bottom: 0;
+		right:0;
 		overflow-x: hidden;
-		overflow-y: scroll;
 		box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.2);
-	  	-webkit-animation-name: slideIn;
+	  	-webkit-animation-name: slideInR;
     	-webkit-animation-duration: 0.4s;
-    	animation-name: slideIn;
+    	animation-name: slideInR;
     	animation-duration: 0.4s;
 	}
 
 }
 
 
-
-
-/* Add Animation */
-@-webkit-keyframes slideIn {
-    from {left: -300px; opacity: 0} 
-    to {left: 0; opacity: 1}
+@-webkit-keyframes slideInR {
+    from {right: -300px; opacity: 0}
+    to {right: 0; opacity: 1}
 }
 
-@keyframes slideIn {
-    from {left: -300px; opacity: 0}
-    to {left: 0; opacity: 1}
+@keyframes slideInR {
+    from {right: -300px; opacity: 0}
+    to {right: 0; opacity: 1}
 }
 
 @-webkit-keyframes fadeIn {
-    from {opacity: 0} 
+    from {opacity: 0}
     to {opacity: 1}
 }
 
 @keyframes fadeIn {
-    from {opacity: 0} 
+    from {opacity: 0}
     to {opacity: 1}
 }
-
-
-
-
-
-
-
-
