--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -40,16 +40,16 @@
 
 
 	.modal-content4
-	{	
+	{
 		position: fixed;
 		background-color: white;
 		padding-bottom: 50px;
 		margin-right: auto;
 		width: 50%;
-		top: 0;
+		height: 25%;
+		top: 60%;
 		bottom: 0;
 		overflow-x: hidden;
-		overflow-y: scroll;
 		box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.2);
 	  	-webkit-animation-name: slideIn;
     	-webkit-animation-duration: 0.4s;
@@ -64,7 +64,7 @@
 
 /* Add Animation */
 @-webkit-keyframes slideIn {
-    from {left: -300px; opacity: 0} 
+    from {left: -300px; opacity: 0}
     to {left: 0; opacity: 1}
 }
 
@@ -74,19 +74,11 @@
 }
 
 @-webkit-keyframes fadeIn {
-    from {opacity: 0} 
+    from {opacity: 0}
     to {opacity: 1}
 }
 
 @keyframes fadeIn {
-    from {opacity: 0} 
+    from {opacity: 0}
     to {opacity: 1}
 }
-
-
-
-
-
-
-
-
