--- a/public/scss/_aboutModal.scss
+++ b/public/scss/_aboutModal.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+
 .modal-header3
 {
 	padding: 12px;
@@ -29,8 +31,7 @@
 	top:0;
 	height: 100%;
 	width: 100%;
-	overflow: auto;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0,0,0,0);
 	font-family: 'Inconsolata';
 
 	-webkit-animation-name: fadeIn; /* Fade in the background */
@@ -42,11 +43,13 @@
 	.modal-content3
 	{
 		position: fixed;
-		background-color: white;
-		padding-bottom: 50px;
-		margin-right: auto;
+		background-color: rgba(0,0,0,0.2);
+		padding: 50px;
+		margin-right: 5%;
+		margin-top: 5%;
+		font-family: 'Indie Flower';
 		width: 30%;
-		height: 50%;
+		height: 70%;
 		top: 0;
 		bottom: 0;
 		right:0;
@@ -63,12 +66,12 @@
 
 @-webkit-keyframes slideInR {
     from {right: -300px; opacity: 0}
-    to {right: 0; opacity: 1}
+    to {right: 100px; opacity: 1}
 }
 
 @keyframes slideInR {
     from {right: -300px; opacity: 0}
-    to {right: 0; opacity: 1}
+    to {right: 100px; opacity: 1}
 }
 
 @-webkit-keyframes fadeIn {
