--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -3,13 +3,101 @@
 @import "contactModal";
 @import "portfolioModal";
 
-
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 
 body
 {
-	background-color: white;
+	z-index: 1;
+	background-color: rgba(0,0,0,0.5);
+	background-image: url("IMG_0330.jpg");
+	height: 100%;
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	.title
+	{
+		z-index: 3;
+		font-size: 72px;
+		margin-top: 20%;
+		margin-left: 10%;
+		padding-right: 60%;
+	}
+
+	%buttons-shared
+	{
+		z-index: 3;
+		font-family: 'Indie Flower';
+		border: none;
+		color: black;
+		background-color: rgba(0,0,0,0);
+		padding: 15px 15px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 36px;
+		cursor: pointer;
+		&:hover {text-decoration: underline; color: red;}
+
+	}
+
+	.buttons
+	{
+		margin-left: 10%;
+		padding-right: 60%;
+
+	}
+	.button1
+	{
+		@extend %buttons-shared;
+	}
+
+	.button2
+	{
+		@extend %buttons-shared;
+	}
+
+	.button3
+	{
+		@extend %buttons-shared;
+
+	}
+
+	.button4
+	{
+		@extend %buttons-shared;
+
+	}
+
+	.modal-body1
+	{
+		font-family: 'Indie Flower';
+
+	}
+
+	//Sketch Animations
+
+	#float{
+		position: relative;
+		z-index: 2;
+		-webkit-animation: floatBubble 2s infinite;
+    -webkit-animation-direction:alternate;
+  	}
+
+
+		@-webkit-keyframes floatBubble{
+ 		from{
+        top:25%;
+        -webkit-animation-timing-function: ease-in;
+
+   	}
+
+
+   	to {
+      top:40%;
+      -webkit-animation-timing-function: ease-out;
+   	}
 
 }
 
-
-
+}
