--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -1,11 +1,17 @@
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 .modal-header3 {
   padding: 12px;
-  color: black;
-  font-variant: small-caps; }
+  display: inline; }
+  .modal-header3 .headerText3 {
+    margin: 0px 0px 0px 0px;
+    color: black;
+    float: left;
+    font-size: 30px; }
   .modal-header3 .closeBtn3 {
-    color: #ccc;
+    margin: 0px 0px 0px 0px;
+    color: black;
     float: right;
     font-size: 30px; }
     .modal-header3 .closeBtn3:hover, .modal-header3 .closeBtn3:focus {
@@ -34,7 +40,6 @@
     padding: 50px;
     margin-right: 5%;
     margin-top: 5%;
-    font-family: 'Indie Flower';
     width: 30%;
     height: 70%;
     top: 0;
@@ -46,6 +51,8 @@
     -webkit-animation-duration: 0.4s;
     animation-name: slideInR;
     animation-duration: 0.4s; }
+  .modal3 .modal-body3 {
+    font-family: 'Indie Flower'; }
 
 @-webkit-keyframes slideInR {
   from {
@@ -73,10 +80,15 @@
     opacity: 1; } }
 .modal-header1 {
   padding: 12px;
-  color: black;
-  font-variant: small-caps; }
+  display: inline; }
+  .modal-header1 .headerText1 {
+    margin: 0px 0px 0px 0px;
+    color: black;
+    float: left;
+    font-size: 30px; }
   .modal-header1 .closeBtn1 {
-    color: #ccc;
+    margin: 0px 0px 0px 0px;
+    color: black;
     float: right;
     font-size: 30px; }
     .modal-header1 .closeBtn1:hover, .modal-header1 .closeBtn1:focus {
@@ -116,6 +128,11 @@
     -webkit-animation-duration: 0.4s;
     animation-name: slideInR;
     animation-duration: 0.4s; }
+  .modal1 .modal-body1 {
+    font-family: 'Indie Flower'; }
+    .modal1 .modal-body1 .intro {
+      padding-top: 50px;
+      font-size: 20px; }
 
 @-webkit-keyframes slideInR {
   from {
@@ -143,10 +160,15 @@
     opacity: 1; } }
 .modal-header4 {
   padding: 12px;
-  color: black;
-  font-variant: small-caps; }
+  display: inline; }
+  .modal-header4 .headerText4 {
+    margin: 0px 0px 0px 0px;
+    color: black;
+    float: left;
+    font-size: 30px; }
   .modal-header4 .closeBtn4 {
-    color: #ccc;
+    margin: 0px 0px 0px 0px;
+    color: black;
     float: right;
     font-size: 30px; }
     .modal-header4 .closeBtn4:hover, .modal-header4 .closeBtn4:focus {
@@ -215,12 +237,24 @@
     opacity: 0; }
   to {
     opacity: 1; } }
+.resume-coding .resume-coding-header {
+  font-size: 42px; }
+.resume-coding .resume-coding-body {
+  padding: 20px;
+  padding-left: 10%;
+  font-size: 30px; }
+
 .modal-header2 {
   padding: 12px;
-  color: black;
-  font-variant: small-caps; }
+  display: inline; }
+  .modal-header2 .headerText2 {
+    margin: 0px 0px 0px 0px;
+    color: black;
+    float: left;
+    font-size: 30px; }
   .modal-header2 .closeBtn2 {
-    color: #ccc;
+    margin: 0px 0px 0px 0px;
+    color: black;
     float: right;
     font-size: 30px; }
     .modal-header2 .closeBtn2:hover, .modal-header2 .closeBtn2:focus {
@@ -260,6 +294,10 @@
     -webkit-animation-duration: 0.4s;
     animation-name: slideInR;
     animation-duration: 0.4s; }
+  .modal2 .modal-body2 {
+    font-family: 'Indie Flower';
+    font-size: 20px;
+    padding-top: 50px; }
 
 @-webkit-keyframes slideInR {
   from {
@@ -288,19 +326,20 @@
 body {
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.5);
+  top: 0px;
   background-image: url("IMG_0330.jpg");
-  height: 100%;
-  background-position: center top;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  padding-bottom: 200px; }
   body .title {
-    z-index: 3;
+    z-index: 99;
     font-size: 72px;
     margin-top: 20%;
     margin-left: 10%;
     padding-right: 60%; }
   body .button1, body .button2, body .button3, body .button4 {
-    z-index: 3;
+    z-index: 99;
     font-family: 'Indie Flower';
     border: none;
     color: black;
@@ -317,19 +356,17 @@ body {
   body .buttons {
     margin-left: 10%;
     padding-right: 60%; }
-  body .modal-body1 {
-    font-family: 'Indie Flower'; }
-  body #float {
-    position: relative;
+  body #mydiv {
+    position: absolute;
     z-index: 2;
-    -webkit-animation: floatBubble 2s infinite;
-    -webkit-animation-direction: alternate; }
-@-webkit-keyframes floatBubble {
-  from {
-    top: 25%;
-    -webkit-animation-timing-function: ease-in; }
-  to {
-    top: 40%;
-    -webkit-animation-timing-function: ease-out; } }
+    background-color: rgba(0, 0, 0, 0);
+    text-align: center;
+    border: 1px solid #d3d3d3; }
+  body #mydivheader {
+    padding: 10px;
+    cursor: move;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0);
+    color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
