--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,7 +1,7 @@
 @import "aboutModal";
 @import "blogModal";
 @import "contactModal";
-@import "portfolioModal";
+@import "resumeModal";
 
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 
@@ -9,15 +9,17 @@ body
 {
 	z-index: 1;
 	background-color: rgba(0,0,0,0.5);
+	top: 0px;
 	background-image: url("IMG_0330.jpg");
-	height: 100%;
-	background-position: center top;
+
+	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 
+	padding-bottom: 200px;
 	.title
 	{
-		z-index: 3;
+		z-index: 99;
 		font-size: 72px;
 		margin-top: 20%;
 		margin-left: 10%;
@@ -26,7 +28,7 @@ body
 
 	%buttons-shared
 	{
-		z-index: 3;
+		z-index: 99;
 		font-family: 'Indie Flower';
 		border: none;
 		color: black;
@@ -45,8 +47,8 @@ body
 	{
 		margin-left: 10%;
 		padding-right: 60%;
-
 	}
+
 	.button1
 	{
 		@extend %buttons-shared;
@@ -69,35 +71,23 @@ body
 
 	}
 
-	.modal-body1
-	{
-		font-family: 'Indie Flower';
 
-	}
 
 	//Sketch Animations
 
-	#float{
-		position: relative;
-		z-index: 2;
-		-webkit-animation: floatBubble 2s infinite;
-    -webkit-animation-direction:alternate;
-  	}
+		#mydiv {
+		    position: absolute;
+		    z-index: 2;
+				background-color: rgba(0,0,0,0);
+		    text-align: center;
+		    border: 1px solid #d3d3d3;
+		}
 
-
-		@-webkit-keyframes floatBubble{
- 		from{
-        top:25%;
-        -webkit-animation-timing-function: ease-in;
-
-   	}
-
-
-   	to {
-      top:40%;
-      -webkit-animation-timing-function: ease-out;
-   	}
-
-}
-
+		#mydivheader {
+		    padding: 10px;
+		    cursor: move;
+		    z-index: 2;
+				background-color: rgba(0,0,0,0);
+		    color: #fff;
+		}
 }
