--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -332,6 +332,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 200px; }
+  body .bg {
+    z-index: 99;
+    background-image: url("IMG_0330level2.jpg");
+    top: 0px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
   body .title {
     z-index: 99;
     font-size: 72px;
