--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -329,11 +329,11 @@ body {
   top: 0px;
   background-image: url("IMG_0330.jpg");
   background-position: center;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 200px; }
   body #skater {
-    background-color: red;
     align: center; }
   body .bg {
     z-index: 99;
