--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -9,7 +9,6 @@ body
 {
 	#skater
 	{
-		background-color: red;
 		align: center;
 	}
 
@@ -27,8 +26,8 @@ body
 	background-color: rgba(0,0,0,0.5);
 	top: 0px;
 	background-image: url("IMG_0330.jpg");
-
 	background-position: center;
+	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
 
