--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -10,18 +10,25 @@ body
 	#skater
 	{
 		align: center;
+		position: absolute;
+		z-index: 4;
 	}
 
 	.bg
 	{
-		z-index:99;
+		z-index:5;
 		background-image: url("IMG_0330level2.jpg");
+		background-color: rgba(0,0,0,1);
+
+		background-color: red;
 		top: 0px;
 
-		background-position: center;
+		background-position: absolute;
+		background-attachment: fixed;
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
+
 	z-index: 1;
 	background-color: rgba(0,0,0,0.5);
 	top: 0px;
