--- a/public/scss/_aboutModal.scss
+++ b/public/scss/_aboutModal.scss
@@ -53,8 +53,8 @@
 		position: fixed;
 		background-color: rgba(0,0,0,0.2);
 		padding: 50px;
-		margin-right: 5%;
-		margin-top: 5%;
+	//	margin-right: 5%;
+		//margin-top: 5%;
 		width: 30%;
 		height: 70%;
 		top: 0;
