--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -34,7 +34,7 @@
 	display:none;
 	position: fixed;
 	right:0;
-	top:0;
+	bottom:0;
 	height: 100%;
 	width: 100%;
 	overflow: auto;
@@ -53,11 +53,12 @@
 		background-color: rgba(0,0,0,0.2);
 		text-decoration: none;
 		font-size: 30px;
-		margin-right: 5%;
+		padding: 50px;
+	//	margin-right: 5%;
 		width: 50%;
 		height: 25%;
 		right: 0;
-		top: 60%;
+	//	top: 60%;
 		bottom: 0;
 		overflow-x: hidden;
 		box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.2);
@@ -71,6 +72,17 @@
 				list-style: none;
 			}
 	}
+
+	@media only screen and (max-width: 600px)
+	{
+			.modal-content4
+			{
+				background-color: gray;
+				width: 100%;
+				height: 100%;
+				padding: 0;
+			}
+  }
 
 }
 
