--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -38,8 +38,6 @@
     position: fixed;
     background-color: rgba(0, 0, 0, 0.2);
     padding: 50px;
-    margin-right: 5%;
-    margin-top: 5%;
     width: 30%;
     height: 70%;
     top: 0;
@@ -133,6 +131,18 @@
     .modal1 .modal-body1 .intro {
       padding-top: 50px;
       font-size: 20px; }
+  @media only screen and (max-width: 600px) {
+    .modal1 .modal-content1 {
+      top: 0px;
+      background-image: url("IMG_0330.jpg");
+      background-position: center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-color: rgba(0, 0, 0, 0.5);
+      width: 100%;
+      padding-left: 5px;
+      padding-right: 5px; } }
 
 @-webkit-keyframes slideInR {
   from {
@@ -181,7 +191,7 @@
   display: none;
   position: fixed;
   right: 0;
-  top: 0;
+  bottom: 0;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -197,11 +207,10 @@
     background-color: rgba(0, 0, 0, 0.2);
     text-decoration: none;
     font-size: 30px;
-    margin-right: 5%;
+    padding: 50px;
     width: 50%;
     height: 25%;
     right: 0;
-    top: 60%;
     bottom: 0;
     overflow-x: hidden;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
@@ -211,6 +220,12 @@
     animation-duration: 0.4s; }
     .modal4 .modal-content4 ul {
       list-style: none; }
+  @media only screen and (max-width: 600px) {
+    .modal4 .modal-content4 {
+      background-color: gray;
+      width: 100%;
+      height: 100%;
+      padding: 0; } }
 
 /* Add Animation */
 @-webkit-keyframes slideInR {
@@ -324,6 +339,7 @@
   to {
     opacity: 1; } }
 body {
+  overflow: hidden;
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0px;
@@ -372,5 +388,8 @@ body {
     margin-top: -75px;
     margin-left: 10%;
     padding-right: 60%; }
+  @media only screen and (max-width: 600px) {
+    body {
+      overflow-y: scroll; } }
 
 /*# sourceMappingURL=style.css.map */
