--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -7,6 +7,8 @@
 
 body
 {
+	overflow: hidden;
+
 	#skater
 	{
 		align: center;
@@ -95,9 +97,11 @@ body
 
 	}
 
-
-
-	//Sketch Animations
+	//for mobile
+	@media only screen and (max-width: 600px)
+	{
+		overflow-y: scroll;
+	}
 
 
 }
