--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -4,6 +4,8 @@
 @import "resumeModal";
 
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url('https://fonts.googleapis.com/css?family=Reenie+Beanie');
+
 
 body
 {
@@ -45,24 +47,25 @@ body
 	.title
 	{
 		z-index: 99;
-		font-size: 72px;
+		font-size: 48px;
 		margin-top: 20%;
 		margin-left: 10%;
 		padding-right: 60%;
+		padding-bottom: 20px;
 	}
 
 	%buttons-shared
 	{
 		z-index: 99;
-		font-family: 'Indie Flower';
+		font-family: 'Reenie Beanie';
 		border: none;
 		color: black;
 		background-color: rgba(0,0,0,0);
-		padding: 15px 15px;
+		padding: 5px;
 		text-align: center;
 		text-decoration: none;
 		display: inline-block;
-		font-size: 36px;
+		font-size: 28px;
 		cursor: pointer;
 		&:hover {text-decoration: underline; color: red;}
 
