--- a/public/scss/_blogModal.scss
+++ b/public/scss/_blogModal.scss
@@ -8,8 +8,8 @@
 		margin: 0px 0px 0px 0px;
 		color: black;
 		float:left;
-
-		font-size:30px;
+		font-family: 'Reenie Beanie';
+		font-size:42px;
 
 	}
 	.closeBtn1
@@ -21,7 +21,7 @@
 		font-size:30px;
 		&:hover,&:focus
 		{
-			color: #000;
+			color: black;
 			text-decoration: none;
 			cursor: pointer;
 		}
@@ -69,12 +69,12 @@
 
 	.modal-body1
 	{
-		font-family: 'Indie Flower';
+		font-family: 'Cutive Mono';
 
 		.intro
 		{
 			padding-top: 50px;
-			font-size: 20px;
+			font-size: 16px;
 		}
 
 	}
