--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -8,8 +8,9 @@
 		margin: 0px 0px 0px 0px;
 		color: black;
 		float:left;
+		font-family: 'Reenie Beanie';
+		font-size:42px;
 
-		font-size:30px;
 
 	}
 	.closeBtn4
@@ -21,7 +22,7 @@
 		font-size:30px;
 		&:hover,&:focus
 		{
-			color: #000;
+			color: black;
 			text-decoration: none;
 			cursor: pointer;
 		}
@@ -52,6 +53,8 @@
 		position: fixed;
 		background-color: rgba(0,0,0,0.2);
 		text-decoration: none;
+		font-family: 'Cutive Mono';
+
 		font-size: 30px;
 		padding: 50px;
 	//	margin-right: 5%;
