--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
-@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
 .modal-header3 {
   padding: 12px;
   display: inline; }
@@ -52,7 +52,8 @@
     animation-name: slideInR;
     animation-duration: 0.4s; }
   .modal3 .modal-body3 {
-    font-family: 'Indie Flower'; }
+    font-family: 'Cutive Mono';
+    padding-top: 50px; }
 
 @-webkit-keyframes slideInR {
   from {
@@ -85,14 +86,15 @@
     margin: 0px 0px 0px 0px;
     color: black;
     float: left;
-    font-size: 30px; }
+    font-family: 'Reenie Beanie';
+    font-size: 42px; }
   .modal-header1 .closeBtn1 {
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
     font-size: 30px; }
     .modal-header1 .closeBtn1:hover, .modal-header1 .closeBtn1:focus {
-      color: #000;
+      color: black;
       text-decoration: none;
       cursor: pointer; }
 
@@ -129,10 +131,10 @@
     animation-name: slideInR;
     animation-duration: 0.4s; }
   .modal1 .modal-body1 {
-    font-family: 'Indie Flower'; }
+    font-family: 'Cutive Mono'; }
     .modal1 .modal-body1 .intro {
       padding-top: 50px;
-      font-size: 20px; }
+      font-size: 16px; }
   @media only screen and (max-width: 600px) {
     .modal1 .modal-content1 {
       top: 0px;
@@ -177,14 +179,15 @@
     margin: 0px 0px 0px 0px;
     color: black;
     float: left;
-    font-size: 30px; }
+    font-family: 'Reenie Beanie';
+    font-size: 42px; }
   .modal-header4 .closeBtn4 {
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
     font-size: 30px; }
     .modal-header4 .closeBtn4:hover, .modal-header4 .closeBtn4:focus {
-      color: #000;
+      color: black;
       text-decoration: none;
       cursor: pointer; }
 
@@ -208,6 +211,7 @@
     position: fixed;
     background-color: rgba(0, 0, 0, 0.2);
     text-decoration: none;
+    font-family: 'Cutive Mono';
     font-size: 30px;
     padding: 50px;
     width: 50%;
@@ -282,6 +286,9 @@
   .resume-projects .resume-projects-body iframe {
     height: 400px;
     width: 75%; }
+  .resume-projects .resume-projects-body .game-text {
+    font-size: 14px;
+    font-style: italic; }
 
 .modal-header2 {
   padding: 12px;
@@ -291,14 +298,14 @@
     color: black;
     float: left;
     font-family: 'Reenie Beanie';
-    font-size: 30px; }
+    font-size: 42px; }
   .modal-header2 .closeBtn2 {
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
     font-size: 30px; }
     .modal-header2 .closeBtn2:hover, .modal-header2 .closeBtn2:focus {
-      color: #000;
+      color: black;
       text-decoration: none;
       cursor: pointer; }
 
@@ -365,6 +372,23 @@
     opacity: 1; } }
 body {
   overflow: hidden;
+  	/*.bg
+  	{
+  		z-index:50;
+  		background-image: url("IMG_0330level2.png");
+  		background-position: center;
+  		background-repeat: no-repeat;
+  		background-size: cover;
+  
+  	//	background-color: red;
+  	//	background-color: rgba(0,1,0,0.5);
+  
+  		height: 100%;
+  		width: 100%;
+  		top: 0px;
+  
+  		position: absolute;
+  	}*/
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0px;
@@ -377,17 +401,11 @@ body {
   body #skater {
     align: center;
     position: absolute;
-    z-index: 4; }
-  body .bg {
-    z-index: 5;
-    background-image: url("IMG_0330level2.jpg");
-    background-color: black;
-    background-color: red;
-    top: 0px;
-    background-position: absolute;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover; }
+    z-index: 4;
+    padding-left: 50px;
+    padding-right: 50px; }
+  body #skater_inside {
+    position: relative; }
   body .title {
     z-index: 99;
     font-size: 48px;
