--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -434,6 +434,12 @@ body {
     padding-right: 60%; }
   @media only screen and (max-width: 600px) {
     body {
-      overflow-y: scroll; } }
+      overflow-y: scroll; }
+      body .title {
+        font-size: 30px;
+        padding-bottom: 10px; }
+      body .buttons {
+        margin-top: 5px;
+        font-size: 16px; } }
 
 /*# sourceMappingURL=style.css.map */
