--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -115,6 +115,20 @@ body
 	@media only screen and (max-width: 600px)
 	{
 		overflow-y: scroll;
+
+
+		.title
+		{
+			font-size: 30px;
+			padding-bottom: 10px;
+		}
+
+		.buttons
+		{
+			margin-top: 5px;
+			font-size: 16px;
+
+		}
 	}
 
 
