--- a/public/scss/_aboutModal.scss
+++ b/public/scss/_aboutModal.scss
@@ -10,8 +10,9 @@
 		margin: 0px 0px 0px 0px;
 		color: black;
 		float:left;
+		font-family: 'Reenie Beanie';
+		font-size:42px;
 
-		font-size:30px;
 
 	}
 	.closeBtn3
@@ -23,7 +24,7 @@
 		font-size:30px;
 		&:hover,&:focus
 		{
-			color: #000;
+			color: black;
 			text-decoration: none;
 			cursor: pointer;
 		}
