--- a/public/scss/_resumeModal.scss
+++ b/public/scss/_resumeModal.scss
@@ -1,6 +1,7 @@
 @import "resumeModal-text";
 
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url('https://fonts.googleapis.com/css?family=Cutive+Mono');
 
 
 .modal-header2
