--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
 @import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
@@ -10,14 +11,15 @@
     margin: 0px 0px 0px 0px;
     color: black;
     float: left;
-    font-size: 30px; }
+    font-family: 'Reenie Beanie';
+    font-size: 42px; }
   .modal-header3 .closeBtn3 {
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
     font-size: 30px; }
     .modal-header3 .closeBtn3:hover, .modal-header3 .closeBtn3:focus {
-      color: #000;
+      color: black;
       text-decoration: none;
       cursor: pointer; }
 
@@ -210,21 +212,22 @@
   .modal4 .modal-content4 {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.2);
-    text-decoration: none;
-    font-family: 'Cutive Mono';
     font-size: 30px;
     padding: 50px;
     width: 50%;
     height: 25%;
     right: 0;
     bottom: 0;
+    text-decoration: none;
     overflow-x: hidden;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
     -webkit-animation-name: slideInR;
     -webkit-animation-duration: 0.4s;
     animation-name: slideInR;
     animation-duration: 0.4s; }
-    .modal4 .modal-content4 ul {
+    .modal4 .modal-content4 a {
+      text-decoration: none; }
+    .modal4 .modal-content4 ul li {
       list-style: none; }
   @media only screen and (max-width: 600px) {
     .modal4 .modal-content4 {
@@ -283,12 +286,19 @@
   .resume-projects .resume-projects-body p {
     padding: 10px;
     font-size: 20px; }
-  .resume-projects .resume-projects-body iframe {
-    height: 400px;
-    width: 75%; }
-  .resume-projects .resume-projects-body .game-text {
-    font-size: 14px;
-    font-style: italic; }
+  .resume-projects .resume-projects-body .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0; }
+    .resume-projects .resume-projects-body .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%; }
+  .resume-projects .resume-projects-body .game-text p {
+    font-size: 14px; }
 
 .modal-header2 {
   padding: 12px;
