--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -56,6 +56,21 @@
   .modal3 .modal-body3 {
     font-family: 'Cutive Mono';
     padding-top: 50px; }
+  @media only screen and (max-width: 570px) {
+    .modal3 .modal-content3 {
+      background-image: url("IMG_0330.jpg");
+      background-position: center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-color: rgba(0, 0, 0, 0.5);
+      background-color: gray;
+      width: 100%;
+      height: 100%;
+      padding: 0; }
+      .modal3 .modal-content3 .modal-body3 {
+        position: absolute;
+        padding: 5%; } }
 
 @-webkit-keyframes slideInR {
   from {
@@ -229,7 +244,7 @@
       text-decoration: none; }
     .modal4 .modal-content4 ul li {
       list-style: none; }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 570px) {
     .modal4 .modal-content4 {
       background-color: gray;
       width: 100%;
@@ -444,12 +459,6 @@ body {
     padding-right: 60%; }
   @media only screen and (max-width: 600px) {
     body {
-      overflow-y: scroll; }
-      body .title {
-        font-size: 30px;
-        padding-bottom: 10px; }
-      body .buttons {
-        margin-top: 5px;
-        font-size: 16px; } }
+      overflow-y: scroll; } }
 
 /*# sourceMappingURL=style.css.map */
