--- a/public/scss/_blogModal.scss
+++ b/public/scss/_blogModal.scss
@@ -79,23 +79,55 @@
 
 	}
 
-	@media only screen and (max-width: 600px)
+	@media only screen and (max-width: 570px)
 	{
-			.modal-content1
-			{
-				top: 0px;
-				background-image: url("IMG_0330.jpg");
-				background-position: center;
-				background-attachment: fixed;
-				background-repeat: no-repeat;
-				background-size: cover;
-				background-color: rgba(0,0,0,0.5);
 
-				width: 100%;
-				padding-left: 5px;
-				padding-right: 5px;
+		.modal-content1
+		{
+			background-image: url("IMG_0330.jpg");
+			background-position: center;
+			background-attachment: fixed;
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-color: rgba(0,0,0,0.5);
+
+			background-color: gray;
+			width: 100%;
+			height: 100%;
+			padding: 0;
+
+
+			.modal-header1
+			{
+				padding: 5%;
+				display: block;
+				position: relative;
+
+				.headerText1
+				{
+					font-size:24px;
+				}
+
+				.closeBtn1
+				{
+					font-size: 24px;
+				}
 			}
-  }
+			.modal-body1
+			{
+				position: relative;
+				padding: 5%;
+
+				.intro
+				{
+					font-size: 12px;
+					padding-top: 0;
+				}
+			}
+		}
+	}
+
+
 
 }
 
