--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -72,6 +72,8 @@
 			a
 			{
 					text-decoration: none;
+					font-family: 'Cutive Mono';
+
 			}
 
 			ul li
@@ -82,14 +84,59 @@
 
 	@media only screen and (max-width: 570px)
 	{
-			.modal-content4
+
+		.modal-content4
+		{
+			background-image: url("IMG_0330.jpg");
+			background-position: center;
+			background-attachment: fixed;
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-color: rgba(0,0,0,0.5);
+
+			background-color: gray;
+			width: 100%;
+			height: 100%;
+			padding: 0;
+
+
+			.modal-header4
 			{
-				background-color: gray;
-				width: 100%;
-				height: 100%;
-				padding: 0;
+				padding: 5%;
+				display: block;
+				position: relative;
+
+				.headerText4
+				{
+					font-size:24px;
+				}
+
+				.closeBtn4
+				{
+					font-size: 24px;
+				}
 			}
-  }
+			.modal-body4
+			{
+				position: relative;
+				padding: 5%;
+
+				a
+				{
+					font-size: 20px;
+					text-decoration: none;
+
+				}
+
+				ul li
+				{
+					list-style: none;
+				}
+
+			}
+		}
+	}
+
 
 }
 
