--- a/public/scss/_resumeModal.scss
+++ b/public/scss/_resumeModal.scss
@@ -82,6 +82,52 @@
 		padding-top: 50px;
 	}
 
+
+	@media only screen and (max-width: 570px)
+	{
+
+		.modal-content2
+		{
+			background-image: url("IMG_0330.jpg");
+			background-position: center;
+			background-attachment: fixed;
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-color: rgba(0,0,0,0.5);
+
+			background-color: gray;
+			width: 100%;
+			height: 100%;
+			padding: 0;
+
+
+			.modal-header2
+			{
+				padding: 5%;
+				display: block;
+				position: relative;
+
+				.headerText2
+				{
+					font-size:24px;
+				}
+
+				.closeBtn2
+				{
+					font-size: 24px;
+				}
+			}
+			.modal-body2
+			{
+				position: relative;
+				padding: 5%;
+				font-size: 12px;
+			
+			}
+		}
+	}
+
+
 }
 
 
